--- a/assets/source/css/frontend/components/_nav-sidebar.scss
+++ b/assets/source/css/frontend/components/_nav-sidebar.scss
@@ -16,8 +16,4 @@
 		line-height: 32px;
 		color: $color-nav-sidebar;
 	}
-
-	.menu {
-		clear: left;
-	}
 }
